--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "Тема для primereact",
   "scripts": {
     "build": "npm run clean && npm run cp && npm run build-themes",
-    "build-themes": "npm run build-theme-light && npm run build-theme-dark",
-    "build-theme-light": "sass --update ./src/themes/lara/lara-light/green/theme.scss:dist/theme-light.css",
-    "build-theme-dark": "sass --update ./src/themes/lara/lara-dark/green/theme.scss:dist/theme-dark.css",
+    "build-themes": "npm run build-theme-light",
+    "build-theme-light": "sass --update src/themes/theme-light/theme.scss:dist/theme-light.css",
     "clean": "rm -rf dist",
-    "cp": "cp -r src dist && cp package.json dist",
+    "cp": "cp -r src dist && cp package.json dist && cp -r src/themes/theme-light/fonts dist/fonts",
     "package": "npm run build && npm pack",
     "dev-version": "npm version prerelease --no-git-tag-version --force  --preid development"
   },
