--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "files": [
     "dist"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "@tabler/icons-webfont": "3.16.0"
+  },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
