--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@cdek/primereact",
-  "version": "0.0.6-development.12",
+  "version": "0.0.6-development.13",
   "description": "Тема для primereact",
   "scripts": {
     "build": "npm run clean && npm run cp && npm run build-themes",
     "build-themes": "npm run build-theme-light",
     "build-theme-light": "sass --load-path=node_modules/ --update src/themes/theme-light/theme.scss:dist/theme-light.css",
     "clean": "rm -rf dist",
-    "cp": "cp -r src dist && cp package.json dist && cp -r src/themes/theme-light/fonts dist/fonts && cp -r src/prime-components dist",
+    "cp": "cp -r src dist && cp package.json dist && cp -r src/themes/theme-light/fonts dist/fonts",
     "package": "npm run build && npm pack",
     "dev-version": "npm version prerelease --no-git-tag-version --force  --preid development"
   },
