--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cdek/primereact",
-  "version": "0.0.6-development.14",
+  "version": "1.0.0",
   "description": "Тема для primereact",
   "scripts": {
     "build": "npm run clean && npm run cp && npm run build-themes",
