Allow to deploy on other branches

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,8 +86,8 @@ deploy-storybook:
   artifacts:
     paths:
       - public
-  only:
-    - master
+  #only:
+  #  - master
   when: manual
 
   cache:
