--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker.cdek.ru/node:cypress-browsers-16.18.0-chrome90-ff88
+image: docker.cdek.ru/node:18-alpine
 
 include:
   - project: 'architecture/ci-scripts'
