--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: docker.cdek.ru/node:18-alpine
+image: docker.cdek.ru/node-18.20.3:cypress-browsers-node-18.20.3-chrome-125.0.6422.141-1-ff-126.0.1-edge-125.0.2535.85-1
 
 include:
   - project: 'architecture/ci-scripts'
