--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "package": "npm run build && npm pack",
     "dev-version": "npm version prerelease --no-git-tag-version --force  --preid development",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build -o public"
   },
   "files": [
     "dist"
