--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dist"
   ],
   "dependencies": {
+    "@fontsource/roboto": "^5.1.1",
     "@tabler/icons-webfont": "3.30.0"
   },
   "devDependencies": {
