--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   ],
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.2",
+    "@fontsource/roboto": "^5.1.1",
     "@storybook/addon-essentials": "^8.4.3",
     "@storybook/addon-interactions": "^8.4.3",
     "@storybook/addon-onboarding": "^8.4.3",
@@ -27,7 +28,8 @@
     "@storybook/react-docgen-typescript-plugin": "^1.0.1",
     "@storybook/react-webpack5": "^8.4.3",
     "@storybook/test": "^8.4.3",
-    "@fontsource/roboto": "^5.1.1",
+    "@tabler/icons-react": "^3.31.0",
+    "classnames": "^2.5.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
