--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@storybook/test": "^8.4.3",
     "@tabler/icons-react": "^3.31.0",
     "classnames": "^2.5.1",
+    "css-loader": "^7.1.2",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -39,6 +40,8 @@
     "primereact": "10.8.4",
     "react-docgen": "^7.1.0",
     "sass": "^1.77.6",
-    "storybook": "^8.4.3"
+    "sass-loader": "^16.0.5",
+    "storybook": "^8.4.3",
+    "style-loader": "^4.0.0"
   }
 }
