--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "package": "npm run build && npm pack",
     "dev-version": "npm version prerelease --no-git-tag-version --force  --preid development"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist"
   ],
