--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cdek/primereact",
+  "name": "@cdek-it/primereact",
   "version": "1.2.13",
   "description": "Тема для primereact",
   "scripts": {
